Fix layout overflow issue on firefox

--- a/site/gatsby-site/src/global.css
+++ b/site/gatsby-site/src/global.css
@@ -709,3 +709,9 @@ div .bytemd {
   color: #9b1c1c;
   text-decoration: none;
 }
+
+@-moz-document url-prefix() {
+    #content {
+        overflow: hidden !important;
+    }
+}
